# gl_laba1

./: CMakeLists.txt
src/: main.cpp
